<resources>
    <string name="app_name">Desmonds App Porfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="superduo1">SCORES APP</string>
    <string name="superduo2">LIBRARY APP</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="capstone_proj">CAPSTONE PROJECT</string>
</resources>
