<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#336699"
    android:baselineAligned="true">

    <TextView
        android:text="Desmond's Nanodegree Apps!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"

        android:textColor="#FF9900" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:layout_weight="1"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/superduo1"
        android:id="@+id/button2"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/superduo2"
        android:id="@+id/button3"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/capstone_proj"
        android:id="@+id/button6"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="#003366"
        android:onClick="onClickButton"
        android:textColor="#FFFFFF" />


</LinearLayout>